Bug 215268 - now listen plugin not working for jabber
Summary: now listen plugin not working for jabber
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 171003 172980 202876 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-11-19 12:42 UTC by Alin M Elena
Modified: 2010-09-06 22:52 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2009-11-19 12:42:30 UTC
Version:           0.99.80 (using 4.3.75 (KDE 4.3.75 (KDE 4.4 >= 20091113)) "release 5", KDE:KDE4:UNSTABLE:Desktop / openSUSE_11.2)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.31.5-0.1-desktop

now listen plugin does not change the status for jabber accounts (tested with gtalk) it works for yahoo protocol.

the setStatusMessage method has only this code in it, which explains why is not working...

Q_UNUSED(statusMessage);

any chances to get it working?

Alin
Comment 1 Roman Jarosz 2010-01-04 21:33:15 UTC
SVN commit 1070091 by rjarosz:

If protocol supports status message always implement setStatusMessage.

BUG: 215268



 M  +1 -2      bonjour/bonjouraccount.cpp  
 M  +1 -1      jabber/jabberaccount.cpp  
 M  +1 -1      meanwhile/meanwhileaccount.cpp  
 M  +1 -1      oscar/aim/aimaccount.cpp  
 M  +1 -1      oscar/icq/icqaccount.cpp  
 M  +1 -2      qq/qqaccount.cpp  
 M  +1 -2      sms/smsaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1070091
Comment 2 Roman Jarosz 2010-01-04 21:34:47 UTC
*** Bug 171003 has been marked as a duplicate of this bug. ***
Comment 3 Roman Jarosz 2010-01-04 21:36:45 UTC
*** Bug 172980 has been marked as a duplicate of this bug. ***
Comment 4 Roman Jarosz 2010-01-04 21:41:01 UTC
*** Bug 202876 has been marked as a duplicate of this bug. ***
Comment 5 Alin M Elena 2010-01-06 13:06:12 UTC
Thanks Roman for that. There is one more in the skypeaccount.cpp

Alin
Comment 6 Alin M Elena 2010-01-10 10:48:17 UTC
Hi Roman,

here is a proposed patch to solve the skype status
http://reviewboard.kde.org/r/2534/

Alin
Comment 7 vendetta18 2010-01-14 05:57:10 UTC
I am using openSUSE 11.2 with KDE 4.3.4 and am facing the same problem. The "Now Listening" status is coming for my Yahoo id but not for Google. Can anybody give me any instructions how to install this patch??

Thanks...
Comment 8 vendetta18 2010-01-23 09:28:28 UTC
Has anyone installed this fix successfully? I downloaded the kdenetwork 4.3.4, repalced the files from this bux fix. But encountered errors while doing "make"..
Here are the errors:
------------------------------------------------------------------------------------------------------------------
/home/vivek/Projects/codes/c/kdenetwork/kdenetwork-4.3.4/kopete/protocols/jabber/jabberprotocol.cpp: In member function ‘virtual void JabberProtocol::handleURL(const KUrl&) const’:            
/home/vivek/Projects/codes/c/kdenetwork/kdenetwork-4.3.4/kopete/protocols/jabber/jabberprotocol.cpp:470: warning: ‘virtual void Kopete::Contact::deleteContact()’ is deprecated (declared at /home/vivek/Projects/codes/c/kdenetwork/kdenetwork-4.3.4/kopete/libkopete/kopetecontact.h:421)                                                                                                     
[ 64%] Building CXX object kopete/protocols/jabber/CMakeFiles/kopete_jabber.dir/jabberaccount.o                                                                                                 
/home/vivek/Projects/codes/c/kdenetwork/kdenetwork-4.3.4/kopete/protocols/jabber/jabberaccount.cpp:1781: error: no ‘void JabberAccount::setMergeMessages(bool)’ member function declared in class ‘JabberAccount’                                                                                                                                                                               
/home/vivek/Projects/codes/c/kdenetwork/kdenetwork-4.3.4/kopete/protocols/jabber/jabberaccount.cpp:1786: error: no ‘bool JabberAccount::mergeMessages()’ member function declared in class ‘JabberAccount’                                                                                                                                                                                      
/home/vivek/Projects/codes/c/kdenetwork/kdenetwork-4.3.4/kopete/protocols/jabber/jabberaccount.cpp:1791: error: no ‘void JabberAccount::setOldEncrypted(bool)’ member function declared in class ‘JabberAccount’                                                                                                                                                                                
/home/vivek/Projects/codes/c/kdenetwork/kdenetwork-4.3.4/kopete/protocols/jabber/jabberaccount.cpp:1796: error: no ‘bool JabberAccount::oldEncrypted()’ member function declared in class ‘JabberAccount’                                                                                                                                                                                       
make[2]: *** [kopete/protocols/jabber/CMakeFiles/kopete_jabber.dir/jabberaccount.o] Error 1                                                                                                     
make[1]: *** [kopete/protocols/jabber/CMakeFiles/kopete_jabber.dir/all] Error 2                                                                                                                 
make: *** [all] Error 2                                                                                                                                             ------------------------------------------------------------------------------------------------------------------
Comment 9 Simon Raffeiner 2010-09-06 22:49:38 UTC
This big is still not fixed for ICQ transports in Kopete 1.0.0 on KDE 4.4.5.
Comment 10 Simon Raffeiner 2010-09-06 22:52:25 UTC
> This bug is still not fixed for ICQ transports in Kopete 1.0.0 on KDE 4.4.5.

For some reason it suddenly started working after the plugin was activated for about 20 minutes.