If protocol supports status message always implement setStatusMessage.

BUG: 215268


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1070091